force-app/main/default/objects/RetailStore/fields/Competition_Level__c.field-meta.xml
<CustomField>
    <fullName>Competition_Level__c</fullName>
    <label>Competition Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High</fullName>
            </value>
            <value>
                <fullName>Medium</fullName>
            </value>
            <value>
                <fullName>Low</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>