force-app/main/default/objects/RetailStore/fields/Current_Demand_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_Demand_Score__c</fullName>
    <label>Current Demand Score</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>