force-app/main/default/objects/RetailStore/fields/EBITDA_Margin__c.field-meta.xml
<CustomField>
    <fullName>EBITDA_Margin__c</fullName>
    <label>EBITDA Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>