force-app/main/default/objects/RetailStore/fields/Estimated_Rent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rent__c</fullName>
    <label>Estimated Rent</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>