force-app/main/default/objects/RetailStore/fields/Footfall_Index__c.field-meta.xml
<CustomField>
    <fullName>Footfall_Index__c</fullName>
    <label>Footfall Index</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>