force-app/main/default/objects/RetailStore/fields/Proposed_Square_Footage__c.field-meta.xml
<CustomField>
    <fullName>Proposed_Square_Footage__c</fullName>
    <label>Proposed Square Footage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>