force-app/main/default/objects/RetailStore/fields/Site_Location__c.field-meta.xml
<CustomField>
    <fullName>Site_Location__c</fullName>
    <label>Site Location</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>