force-app/main/default/objects/RetailStore/fields/SubArea__c.field-meta.xml
<CustomField>
    <fullName>SubArea__c</fullName>
    <label>SubArea</label>
    <length>255</length>
    <type>Text</type>
</CustomField>