force-app/main/default/objects/RetailStore/listViews/All_RetailStore.listView-meta.xml
<ListView>
    <fullName>All_RetailStore</fullName>
    <columns>Name</columns>
    <columns>RetailLocationGroup</columns>
    <columns>Current_Demand_Score__c</columns>
    <columns>Demographic_Score__c</columns>
    <columns>EBITDA_Margin__c</columns>
    <columns>Expected_Annual_Revenue__c</columns>
    <columns>Footfall_Index__c</columns>
    <columns>Competition_Level__c</columns>
    <columns>LastModifiedDate</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>